examples/errors/ModuleInvalidContentError.flx
// Triggers E019 (INVALID MODULE CONTENT)
module ModuleInvalidContentError {
  let x = 1;
}
